--- a/package.json
+++ b/package.json
@@ -2,23 +2,31 @@
   "name": "@qtb/git-open",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",  
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "bin",
+    "src"
+  ],
   "type": "module",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "bin": {
-    "git-open": "./src/index.js"
+    "git-open": "./bin/git-open.js"
   },
   "scripts": {
     "build": "rolldown --config rolldown.config.js",
-    "dev": "rolldown --config rolldown.config.js --watch"
+    "dev": "rolldown --config rolldown.config.js --watch",
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+
   "volta": {
     "node": "18.20.2"
   },
-  "devDependencies": {
+  "dependencies": {
     "commander": "^14.0.0",
     "open": "^10.1.2",
     "rolldown": "1.0.0-beta.20",
